Styling adjustments to demo

--- a/demo.html
+++ b/demo.html
@@ -9,20 +9,21 @@
       #entry {
         font-family: monospace;
         font-size: 18pt;
-        color: #fff;
+        color: #999;
         padding: 10px;
         background-color: #000;
         white-space: pre;
         }
       #entry .prompt {
-        color: #0ff;
+        color: #fff;
         }
       #entry .cursor {
         background-color: #f00;
+	border-bottom: 3px solid #f00;
         color: #800;
         }
       #entry .ctrl {
-        background-color: #f0f;
+	border-bottom: 3px solid #ff0;
         }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
